--- a/templates/index.html
+++ b/templates/index.html
@@ -4,42 +4,74 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>WordCount</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
-        <!-- JavaScript Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </head>
-    <body class="container-sm">
-        <br>
-        <h1>Simple Wordcount App</h1>
-        <form action="" method="post">
-            <input class="form-control form-control-lg" type="text" name="url">
-            <br>
-            <button class="btn btn-primary" type="submit">Submit</button>
-        </form>
-        <br>
 
-        <div>
-            {% if formUrl %}
-            <span class="badge bg-secondary">Showing result for {{formUrl}}</span>
-            {% endif %}
-            <ul class="list-group list-group-flush">
-                {% for key,value in result.json.items() %}
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>WordCount</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</head>
+
+<body class="container-sm">
+    <br>
+    {% set loading = False %}
+    <h1>Web Scraper: Wordcount App</h1>
+    <form action="" method="post">
+        <input class="form-control form-control-lg" type="text" name="url" value={{formUrl}}>
+        <br>
+        <button class="btn btn-primary" type="submit" name="links" value="oneLink" id="l">Scrape this link only</button>
+        <button class="btn btn-info" type="submit" name="links" value="allLinks">Scrape all included links</button>
+    </form>
+    <br>
+    <div class="alert alert-primary" role="alert" id="load"> Please insert the link that you want to scrape
+    </div>
+    <div>
+        {% if formUrl %}
+        <span class="badge bg-secondary">Showing result for {{formUrl}}</span>
+        <li class="list-group-item active" aria-current="true">Total unique words: {{result_len}}</li>
+        {% endif %}
+        <ul class="list-group list-group-flush">
+            {% for key,value in result.json.items() %}
+                {% if errors %}
+                    <div class="alert alert-danger" role="alert">{{key}}: {{value}}</div>
+                {% else %}
                     <li class="list-group-item">{{key}}: {{value}}</li>
-                {% endfor %}
-            </ul>
-        </div>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+                {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+    <script>
+        const elements = document.getElementsByName("links");
+        for (const el of Array.from(elements)) {
+            el.addEventListener("click",myFunction);
+        }
+        function delay(time) {
+            return new Promise(resolve => setTimeout(resolve, time));
+        }
+
+        function myFunction() {
+            document.getElementById("load").innerHTML = "Loading...";
+            // while(true){
+            //     document.getElementById("load").innerHTML += "."
+            //     // delay(1000);
+            //     console.log("Hello")
+            // }
+            setTimeout(() => { document.getElementById("load").innerHTML = "It may take some time"; }, 5000);
+            setTimeout(() => { document.getElementById("load").innerHTML = "Scraping all links.... It is a huge website"; }, 10000);
+            setTimeout(() => { document.getElementById("load").innerHTML = "I appreciate your patience"; }, 20000);
+        }
+    </script>
+    <script src="" async defer></script>
+</body>
+
 </html>
